<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <FrameLayout
        android:padding="10dp"
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--<android.support.v7.widget.Toolbar-->
            <!--android:id="@+id/toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="?attr/actionBarSize"-->
            <!--android:background="?attr/colorPrimary"-->
            <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Bill summary header -->
            <TextView
                android:id="@+id/bill_summary_heading"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_centerHorizontal="true"
                android:text="@string/bill_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Summary -->

            <!-- Number of trips -->
            <TextView
                android:layout_marginTop="20dp"
                android:layout_below="@+id/bill_summary_heading"
                android:text="@string/number_of_trips"
                android:id="@+id/number_of_trips_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:layout_toRightOf="@+id/number_of_trips_lbl"
                android:layout_below="@+id/bill_summary_heading"
                android:id="@+id/number_of_trips_value"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:text="-" />

            <!-- Rate per trip -->

            <TextView
                android:layout_marginTop="20dp"
                android:layout_below="@+id/number_of_trips_lbl"
                android:text="@string/rate_per_trip"
                android:id="@+id/rate_per_trips_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/rate_per_trips_lbl"
                android:layout_below="@+id/number_of_trips_value"
                android:id="@+id/rate_per_trips_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-" />

            <!-- Bill amount -->

            <TextView
                android:layout_marginTop="20dp"
                android:layout_below="@+id/rate_per_trips_lbl"
                android:text="@string/amount_to_be_paid"
                android:id="@+id/bill_amount_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/bill_amount_lbl"
                android:layout_below="@+id/rate_per_trips_value"
                android:id="@+id/bill_amount_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-" />

            <!-- where -->
            <ProgressBar
                android:layout_alignParentBottom="true"
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleSmallInverse"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content" />

            <!-- view messages -->
            <Button
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:id="@+id/view_messages_button"
                android:text="@string/view_messages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>

    </FrameLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        app:menu="@menu/menu_parent"
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true" />

</android.support.v4.widget.DrawerLayout>